Got flex-wrap working while keeping traits in line a nd images the correct size. Main completed.

--- a/style.css
+++ b/style.css
@@ -16,10 +16,14 @@ h1 {color: white;}
 }
 
  .playingmatt {
-     flex-wrap: nowrap;
-   flex-direction: row;
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
     grid-template-columns: 1fr 1fr 1fr;
     max-width: 1200px;
+    justify-items: center;
+    margin-left: 20px;
+
 
 
 }
@@ -27,7 +31,7 @@ h1 {color: white;}
 .traits {
     display: flex;
     flex-wrap: wrap;
-    width: 395px;
+    width:  400px;
     align-items: flex-start;
     padding: 0px;
     margin: 0px;
@@ -49,84 +53,48 @@ li{
     font-size: 12px;
 }
 
-.card1 {
-    grid-column: 1;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card1 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
-.card2 {
-    grid-column: 2;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card2 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
-.card3 {
-    grid-column: 3;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card3 img {
-    width: 25rem;
+    width: 20rem;
 }
-.card4 {
-    grid-column: 1;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card4 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
-.card5 {
-    grid-column: 2;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card5 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
-.card6 {
-    grid-column: 3;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card6 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
-.card7 {
-    grid-column: 1;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card7 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
-.card8 {
-    grid-column: 2;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card8 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
-.card9 {
-    grid-column: 3;
-    grid-row: 1;
-    padding: 20px;
-}
+
 .card9 img {
-    width: 25rem;
+    width: 20rem;
     flex-shrink: 3;
 }
 
